--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint:js": "eslint --ext .js,.jsx,.cjs,.mjs,.ts,.tsx src/",
+    "fix:js": "npm run lint:js -- --fix"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx}": [
-      "eslint --ext .tsx --ext .ts ./src --fix"
-    ],
-    "./src/**": [
-      "prettier --write ."
+    "src/**/*.{js, jsx, cjs, mjs, ts,tsx}": [
+      "npm run lint:js"
     ]
   },
   "dependencies": {
@@ -32,13 +30,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
+    "@next/eslint-plugin-next": "^12.1.6",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "babel-loader": "^8.2.5",
     "eslint": "8.15.0",
     "eslint-config-next": "^12.1.6",
-    "typescript": "4.6.4"
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "typescript": "^4.6.4"
   }
 }
