--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "lint-staged": {
     "src/**/*.{js, jsx, cjs, mjs, ts,tsx}": [
-      "npm run lint:js"
+      "npm run lint:js -- --cache"
     ]
   },
   "dependencies": {
