--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint:js": "eslint --ext .js,.jsx,.cjs,.mjs,.ts,.tsx src/",
-    "fix:js": "npm run lint:js -- --fix"
+    "fix:js": "npm run lint:js -- --fix",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "src/**/*.{js, jsx, cjs, mjs, ts,tsx}": [
