--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "lint-staged": {
     "src/**/*.{js, jsx, cjs, mjs, ts,tsx}": [
-      "npm run lint:js -- --cache"
+      "npm run lint:js"
     ]
   },
   "dependencies": {
@@ -22,17 +22,13 @@
     "@svgr/webpack": "^6.2.1",
     "eslint-config-prettier": "^8.5.0",
     "framer-motion": "^6.3.3",
-    "husky": "^8.0.1",
     "next": "12.1.6",
-    "prettier": "^2.6.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@next/eslint-plugin-next": "^12.1.6",
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
@@ -45,6 +41,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
     "typescript": "^4.6.4"
   }
