--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@svgr/webpack": "^6.2.1",
     "eslint-config-prettier": "^8.5.0",
     "framer-motion": "^6.3.3",
+    "framer-motion-carousel": "^2.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
